--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    margin: 0;
+    margin-left: 0;
     padding: 0;
     font-family: "averta cy w10";
     box-sizing: border-box;
@@ -82,6 +82,10 @@ html, body {
     letter-spacing: -8px; 
 }
 
+#homemain .headings h1:hover{
+    color: #000;
+}
+
 #homelast{
     padding: 5vw 15vw;
 }
@@ -99,31 +103,61 @@ html, body {
     font-weight: 400;
 }
 
-#featured h1{
-    line-height: 1;
+.fheading > h1 {
+    margin: 0;
+    line-height: .8;     
     font-size: 4vw;
     font-weight: 400;
 }
 
-#featured h1:nth-last-child(2){
+.fheading > h1:nth-child(2) {
     color: transparent;
     -webkit-text-stroke: 1px black;
 }
+
 
 #fimages {
     display: flex; 
     justify-content: space-between; 
     width: 100%;
-    min-height: 100vh; 
+    height: 100vh; 
     margin-top: 5vw;
     padding: 0 15vw; 
     box-sizing: border-box;
 }
 
 #fleft {
+    overflow: hidden;
     width: 45%;
-    min-height: inherit;
-    border: 1px solid blue;
+    height: inherit;
+  
+}
+
+.fleftelm{
+    width: 100%;
+    height: inherit;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+
+.fleftelm h1{
+    font-size: 2vw;
+    line-height: 1;
+    font-weight: 400;
+    text-transform: capitalize;
+    margin: 1.5vw 0;
+}
+
+.fleftelm h3{
+    font-size: 1.3vw;
+    font-weight:400;
+}
+
+
+.fleftelm h4{
+    opacity: .5;
 }
 
 #fright {
@@ -131,13 +165,101 @@ html, body {
     align-items: center;
     justify-content: flex-end;
     width: 45%;
-    min-height: inherit;
+    height: inherit;
     
 }
  
 #fright .images{
     width: 90%;
-    height: 80%;
-    background-color: red;
+    height: 90%;
+    
 
+   
+
+}
+
+#fright .images img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.btndiv {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btndiv button{
+    padding: 1.3vw 2.5vw;
+    border-radius: 100px;
+    border: 2px solid rgb(227, 219, 219);
+    background-color: #fff;
+    font-size:1vw ;
+    font-weight: 500;
+    letter-spacing: -1px;
+}
+
+#dev{
+    width: 100%;
+    padding: 5vw 15vw;
+    
+   
+    
+}
+
+#dev h1,p{
+    margin-left: 15vw;
+}
+
+#dev h1{
+    font-size: 3.8vw;
+    font-weight: 400;
+    line-height: 1;
+}
+
+#dev p{
+    font-size: 1.5vw;
+    letter-spacing: -.5px;
+}
+
+#slides {
+   display: flex;
+   padding: 3vw 10vw;
+   justify-content: space-between;
+
+}
+
+.slide{
+    width: 30%;
+}
+
+.slide .img{
+    width: 100%;
+    height: 270px;
+    background-color:yellowgreen;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.slide .img img{
+    width: 100%;
+    height:100%;
+    object-fit: cover;
+
+}
+
+.slide .tag{
+    padding: 10px 22px;
+    width: fit-content;
+    border-radius: 100px;
+    background-color: #fbfbfb;
+    margin: 20px 0;
+
+}
+
+.slide h3{
+    font-size: 1.4vw;
+    font-weight: 400;
+    letter-spacing: -.5px;
 }
