--- a/style.css
+++ b/style.css
@@ -263,3 +263,112 @@ html, body {
     font-weight: 400;
     letter-spacing: -.5px;
 }
+
+/* -------------------- FOOTER -------------------- */
+
+#footer {
+    background: #111;
+    color: #fff;
+    padding: 80px 10vw 40px;
+    margin-top: 80px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-left {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;  
+}
+
+.footer-left h2 {
+    font-size: 2rem;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+.footer-left p {
+    font-size: 1rem;
+    opacity: 0.7;
+    line-height: 1.6;
+    margin: 0; 
+}
+
+.social-links {
+    margin-top: 20px;
+}
+
+.social-links a {
+    color: #fff;
+    font-size: 1.3rem;
+    margin-right: 15px;
+    transition: 0.3s;
+}
+
+.social-links a:hover {
+    opacity: 0.5;
+}
+
+.footer-right {
+    display: flex;
+    gap: 60px;
+    flex-wrap: wrap;
+}
+
+.footer-col h3 {
+    margin-bottom: 15px;
+    font-size: 1.2rem;
+}
+
+.footer-col a {
+    display: block;
+    color: #ccc;
+    margin-bottom: 10px;
+    font-size: 0.95rem;
+    transition: 0.3s;
+}
+
+.footer-col a:hover {
+    color: #fff;
+}
+
+
+.footer-bottom {
+    text-align:auto;
+    margin-top: 50px;
+    padding-top: 20px;
+    border-top: 1px solid #333;
+}
+
+.footer-bottom p {
+    opacity: 0.6;
+}
+
+#footer a {
+    text-decoration: none !important;
+}
+
+
+/* -------------------- MOBILE RESPONSIVE -------------------- */
+
+@media (max-width: 768px) {
+    .footer-container {
+        flex-direction: column;
+        gap: 40px;
+    }
+
+    .footer-left,
+    .footer-right {
+        width: 100%;
+    }
+
+    .footer-right {
+        flex-direction: column;
+        gap: 30px;
+    }
+}
